--- a/PrintSolution/PrintSolution.csproj
+++ b/PrintSolution/PrintSolution.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BFB7E9FE-46B7-4E58-ABA1-B8FE1598EEC2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Solution1</RootNamespace>
-    <AssemblyName>Solution1</AssemblyName>
+    <RootNamespace>PrintSolution</RootNamespace>
+    <AssemblyName>PrintSolution</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -56,7 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrintController.cs" />
+    <Compile Include="PrintUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -67,6 +67,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
