--- a/PrintSolution/packages.config
+++ b/PrintSolution/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FreeSpire.Doc" version="10.8.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net46" />
 </packages>
