프린트 목록 검색기능 개선

--- a/PrintSolution/PrintSolution.csproj
+++ b/PrintSolution/PrintSolution.csproj
@@ -86,5 +86,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ignore.inf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
